--- a/src/components/share/share.css
+++ b/src/components/share/share.css
@@ -3,6 +3,7 @@
   border-radius: 10px;
   -webkit-box-shadow: 0px 0px 16px -8px rgba(0, 0, 0, 0.68);
   box-shadow: 0px 0px 16px -8px rgba(0, 0, 0, 0.68);
+  background-color: white;
 }
 
 .shareWrapper {
@@ -44,6 +45,7 @@
 .shareOptions{
     display: flex;
     margin-left: 20px;
+    
 }
 
 .shareOption{
@@ -67,7 +69,7 @@
     border: none;
     padding: 7px;
     border-radius: 5px;
-    background-color: green;
+    background-color: rgb(230,115,0);
     font-weight: 500;
     margin-right: 20px;
     cursor: pointer;
