--- a/src/components/sidebar/sidebar.css
+++ b/src/components/sidebar/sidebar.css
@@ -1,19 +1,19 @@
 .sidebar {
-    flex: 3;
+    flex: 1.5;
     height: calc(100vh - 50px);
     overflow-y: scroll;
     position: sticky;
-    top: 50px;
+    top: 60px;
   }
   
   ::-webkit-scrollbar {
     width: 5px;
   }
   ::-webkit-scrollbar-track {
-    background-color: #f1f1f1;
+    background-color: rgba(233, 137, 41, 0.747);
   }
   ::-webkit-scrollbar-thumb {
-    background-color: rgb(179, 179, 179);
+    background-color:   rgb(245, 245, 237) ;
   }
   
   .sidebarWrapper {
@@ -21,13 +21,13 @@
   }
   
   .sidebarList {
-    padding: 0;
-    margin: 0;
+    padding: 10px;
+    margin: 20px;
     list-style: none;
   }
   
   .sidebarListItem {
     display: flex;
     align-items: center;
-    margin-bottom: 20px;
+    margin-bottom: 40px;
   }
