--- a/src/components/signin/signin.css
+++ b/src/components/signin/signin.css
@@ -4,7 +4,7 @@
 .body {
 	font-family: poppins;
 	font-size: 16px;
-	/* color: rgb(248, 244, 244); */
+	color: rgb(248, 244, 244);
 }
 .form-box {
 	background-color: rgba(0, 0, 0, 0.5);
