--- a/src/components/message/message.css
+++ b/src/components/message/message.css
@@ -19,7 +19,7 @@
   .messageText{
       padding: 10px;
       border-radius: 20px;
-      background-color: #1877f2;
+      background-color: #E65C00;
       color: white;
       max-width: 300px;
   }
