--- a/src/components/register/signup.css
+++ b/src/components/register/signup.css
@@ -6,6 +6,36 @@
 	font-size: 16px;
 	/* color: #fff; */
 }
+.wrap {
+  width: 100vw;
+  height: 100vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+
+.loginLeft{
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+	
+}
+.loginLogo {
+  font-size: 50px;
+  font-weight: 800;
+  color: #000000;
+  margin-bottom: 10px;
+	margin-left: 20px;
+}
+
+.loginDesc {
+  font-size: 24px;
+	margin-left: 20px;
+	color: #000000;
+}
+
 .form-box {
 	background-color: rgba(0, 0, 0, 0.5);
 	margin: auto auto;
@@ -13,12 +43,12 @@
 	border-radius: 5px;
 	box-shadow: 0 0 10px #000;
 	position: absolute;
-	top: 0;
+	top: 50px;
 	bottom: 0;
-	left: 0;
+	left: 300px;
 	right: 0;
-	width: 500px;
-	/* height: 86%; */
+	width: 400px;
+	/* height: 65%; */
 }
 .form-box:before {
 	background-image: url("https://i.postimg.cc/8cnYLpfc/ddddd.jpg");
