--- a/src/components/share/share.css
+++ b/src/components/share/share.css
@@ -69,7 +69,7 @@
     border: none;
     padding: 7px;
     border-radius: 5px;
-    background-color: rgb(230,115,0);
+    background-color: #CF7500;
     font-weight: 500;
     margin-right: 20px;
     cursor: pointer;
